feat: enhance review context management with comment loading and saving functionality